Remove top margin from pull-quotes (alignment issue)

--- a/sass/patterns/_pull-quote.scss
+++ b/sass/patterns/_pull-quote.scss
@@ -5,7 +5,7 @@
 -------------------------------------------------------------- */
 
 .pull-quote {
-	margin-top: 2em;
+	margin-top: 0;
 	margin-bottom: 2em;
 }
 
